Copyedits for 14 May 2023

--- a/newsletter/2023-05-14.md
+++ b/newsletter/2023-05-14.md
@@ -22,9 +22,9 @@
 
 These are actual characteristics of the two biggest blockchain networks, Bitcoin and Ethereum, which constitute a combined 65% of the global crypto market. Right now. Even with the global token market still well below its all-time high of a $3 trillion valuation set in late 2021.
 
-These are real successes -- ones that are generally overlooked, in my opinion. Between the obsession with daily swings in the token market and crypto folks' propensity to squabble about differences between their favorite chains, it's easy to lose sight of this bigger picture. 
+These are real successes -- ones that are generally overlooked, in my opinion. Between the obsession with daily swings in the token market and crypto folks' propensity to squabble about differences between their favorite chains, it's easy to lose sight of this bigger picture.
 
-Ultimately, it shouldn't be about "my chain is better than your chain." It's about replacing the current shit that the masses of people are actually using, made by a shitty oligarchy based in a single country. That's what it will take to truly make a better internet for everyone.
+Ultimately, it shouldn't be about "my chain is better than your chain." It's about unseating the current shit that the masses of people are actually using, made by a shitty oligarchy based in a single country. That's what it will take to truly make a better internet for everyone.
 
 On to the week's notable headlines:
 
@@ -43,7 +43,7 @@ On to the week's notable headlines:
  </em>
 <hr>
 
-- **Bittrex filed** for Chapter 11 [bankruptcy protection](https://decrypt.co/139368/american-crypto-exchange-bittrex-files-for-chapter-11-bankruptcy). The Seattle-based exchange, which was recently slapped with charbes by U.S. regulators for not registering as a securities broker-dealer, says it has more than 100,000 creditors who are owed up to $1 billion in total.
+- **Bittrex filed** for Chapter 11 [bankruptcy protection](https://decrypt.co/139368/american-crypto-exchange-bittrex-files-for-chapter-11-bankruptcy). The Seattle-based exchange, which was recently slapped with charges by U.S. regulators for not registering as a securities broker-dealer, says it has more than 100,000 creditors who are owed up to $1 billion in total.
 
 - **A former Coinbase product manager** was sentenced to two years in prison for insider trading, the first time U.S. prosecutors and courts have [applied such laws to crypto](https://arstechnica.com/tech-policy/2023/05/1-5m-crypto-scheme-leads-to-2-year-prison-term-for-ex-coinbase-manager/).
 
@@ -53,7 +53,7 @@ On to the week's notable headlines:
 
 - **Goldman Sachs, Microsoft, Moody's,** and other corporate heavyweights are [joining the Canton Network](https://www.theblock.co/post/229922/goldman-sachs-moodys-digital-assets-blockchain-network-canton), a new blockcain platform optimized for managing institutional assets. Canton is set to launch in July, with fintech startup Digital Assets leading its development.
 
-- **Facebook parent Meta warned** that a wave of hackers is now [targeting users](https://www.cnn.com/2023/05/03/tech/chatgpt-hackers-meta/index.html) interested in the artificial intelligence app ChatGPT, in a trend akin to the proliferation of crypto scams.
+- **Facebook parent Meta warned** that a wave of hackers is now [targeting users](https://www.cnn.com/2023/05/03/tech/chatgpt-hackers-meta/index.html) interested in the artificial intelligence app ChatGPT, in a trend akin to the earlier proliferation of crypto scams.
 
 - **Decrypt reports** that the chips from inactive crypto mining rigs are [poorly suited for AI applications](https://decrypt.co/139825/crypto-mining-chips-ai-heres-why). Sorry.
 
