--- a/newsletter/2023-05-14.md
+++ b/newsletter/2023-05-14.md
@@ -1,3 +1,4 @@
+
 # Public blockchains rock.
 ## #Web3Weekly: May 7-13, 2023
 
@@ -14,9 +15,9 @@
 
 - Are fully open source, including *publicly available, transparent algorithms.* No secret sauce working contrary to users' privacy, a shared sense of objective truth, and other things [necessary for modern society](https://www.theguardian.com/books/2016/oct/27/cathy-oneil-weapons-of-math-destruction-algorithms-big-data) as we know it to continue.
 
-- Are relatively untouched by -- and definitely not controlled by -- the oligarchy of [massive public U.S. tech companies](https://www.forbes.com/advisor/investing/faang-stocks-mamaa/) that otherwise dominate everyone's experience of the internet.
+- Are not controlled by the oligarchy of [massive public U.S. tech companies](https://www.forbes.com/advisor/investing/faang-stocks-mamaa/) that otherwise dominate everyone's experience of the internet.
 
-- Carry a combined market valuation north of $700 billion regardless.
+- Carry a combined market valuation north of $700 billion nevertheless.
 
 [![EWC banner ad](https://w3w.news/img/sponsored/ewc-banner.png)](http://bit.ly/3kDskvF)
 
