Minor edits to notes + lead riff.

--- a/newsletter/2023-05.21.md
+++ b/newsletter/2023-05.21.md
@@ -1,13 +1,6 @@
 # tktk
 ## #Web3Weekly: May 14-20, 2023
 
-<!--
-
-![](https://w3w.news/img/illos/tktktktktktktktkttktktktk)
-*"tktktktktkt" by Peter A. McKay × DALL·E*
-
--->
-
 *This newsletter is elated to be a media partner of the [Epic Web3 Conference](https://www.epicweb3.com/), coming up June 9 in Lisbon. This can't-miss event will feature an [amazing lineup](https://www.epicweb3.com/#speaker) of speakers from every facet of the web3 space, as you can see from the graphic below.*
 
 *As a special offer to our readers, Epic Web3 is offering a 15% discount when you purchase a Full or VC pass to their conference. To redeem the #Web3Weekly discount, be sure to apply the code WEB3WEEKLY at checkout when you purchase your ticket [here](http://bit.ly/3kDskvF).*
@@ -20,7 +13,7 @@
 
 <!--
 
-Lede riff. Perhaps cover "Chokepoint 2.0", which hasn't been mentioned in the newsletter yet...
+Riff on debt ceiling.
 
 -->
 
