Adding links to news summary.

--- a/newsletter/2023-05.21.md
+++ b/newsletter/2023-05.21.md
@@ -15,13 +15,41 @@
 
 Riff on debt ceiling.
 
+https://www.coindesk.com/consensus-magazine/2023/05/17/what-does-the-debt-limit-showdown-mean-for-bitcoin/
+
+https://www.theblock.co/post/231639/biden-opposes-debt-deal-friendly-to-crypto-traders-amid-threat-of-u-s-default
+
 -->
 
 The week's headlines:
 
 - We need better btc custodial solutions: https://www.coindesk.com/consensus-magazine/2023/05/12/as-bitcoin-scales-we-need-better-custodial-solutions/
 
-- Vice bankruptcy <!-- Need link -->               
+- CoinDesk's Casey: AI and web3 "belong together." https://www.coindesk.com/consensus-magazine/2023/05/19/why-web3-and-the-ai-internet-belong-together/
+
+- Coinbase expanded its subscription service to the UK, Ireland, and Germany. https://www.theblock.co/post/231384/coinbase-one-subscription-uk-germany-ireland
+
+- Scammers are already targeting Worldcoin. https://www.theblock.co/post/231433/worldcoin-iris-black-market
+
+- Custodia Bank is launching BTC custody services. https://decrypt.co/140603/bitcoin-custody-services-are-coming-to-custodia-bank-says-ceo-caitlin-long
+
+- The U.S. government is one of the market's largest bitcoin whales. What could possibly go wrong? https://www.theblock.co/post/231563/the-us-government-is-one-of-the-largest-bitcoin-whales-what-does-that-mean-for-the-crypto-market
+
+- Bitcoin companies must provide "proof of reserves" in Texas under a new law. https://decrypt.co/140647/texas-proof-of-reserves-for-crypto-exchanges
+
+- Saylor says MicroStrategy is looking at Ordinals as a development platform. https://decrypt.co/140670/microstrategy-looking-at-bitcoin-ordinals-for-app-development-says-michael-saylor
+
+- VeeCon is shifting beyond web3. https://decrypt.co/videos/interviews/FqIm7PfV/gary-vee-discusses-veecon-2023s-broader-shift-beyond-web3
+
+- Attendance was down at BTC Miami. https://decrypt.co/140595/bitcoin-2023-in-miami-bear-market-lower-attendance | Dorsey's TBD unveiled new "web5" toolkit. https://www.coindesk.com/tech/2023/05/19/jack-dorsey-backed-tbd-launches-new-web5-toolkit-to-decentralize-the-internet/
+
+- An attacker took over the Tornado Cash DAO. https://www.coindesk.com/tech/2023/05/21/attacker-takes-over-tornado-cash-dao-with-vote-fraud-token-slumps-40/
+
+- Strike has expanded to 65 countries. https://www.coindesk.com/tech/2023/05/19/bitcoin-payments-app-strike-expands-to-65-countries-from-three/
+
+- JPMorgan analysts say a lack of regulatory clarity in the U.S. concerning stablecoins may hamper a broader crypto recovery. https://www.coindesk.com/markets/2023/05/19/crypto-market-recovery-unlikely-until-stablecoin-universe-stops-shrinking-jpmorgan/           
+
+- The Australian Stock Exchange scrapped its blockchain project. https://bitcoinist.com/blockchain-plans-scrapped-by-asx/
 
 - NYT: E-sports franchises are struggling, putting themselves up for sale. https://www.nytimes.com/2023/05/20/technology/e-sports-revenue-video-gaming.html
 
@@ -33,15 +61,13 @@ The week's headlines:
 
 - Great AI danger is in the military: https://www.nytimes.com/2023/05/19/opinion/artificial-intelligence-military-nuclear.html
 
-- AI in real estate: https://builtin.com/artificial-intelligence/ai-real-estate | 
+- AI in real estate: https://builtin.com/artificial-intelligence/ai-real-estate |
 
 - SEC says it doesn't need new rules specific to crypto, contrary to Coinbase's claims. <!-- Need link -->
 
 - Microsoft says its AI is showing signs of sentience. https://www.nytimes.com/2023/05/16/technology/microsoft-ai-human-reasoning.html
 
 - Bloomberg: Novogratz's Galaxy Digital moving some operations offshore. Hmmmm... <!-- Need link -->
-
-- tk
 
 <hr>
  <em>
@@ -58,9 +84,13 @@ The week's headlines:
 
 - Bloomberg survey of top 60 crypto companies shows that most don't adhere to best practices on corporate governance. <!-- need link -->
 
+- MIT Tech Review: Your digital life isn't as permanent as you think it is. https://www.technologyreview.com/2023/05/19/1073367/digital-life-isnt-permanent-google-twitter-inactive-accounts/
+
+- ICYMI: Cointelegraph did a video explainer of how venture capitalist Tim Draper became a bitcoin billionaire. https://www.youtube.com/watch?v=qDCJJHODjeA
+
 - There's a new on-chain governance survey out as well, covering top 50 chains. Hmmm... <!-- Need link -->
 
-- tk <!-- Lighter item. Need link -->
+- A startup is turning Old Game Boys into crypto wallets. https://decrypt.co/140730/old-game-boy-could-next-bitcoin-ethereum-wallet
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
