Writethrough for 21 May 2023

--- a/newsletter/2023-05.21.md
+++ b/newsletter/2023-05.21.md
@@ -1,4 +1,4 @@
-# tktk
+# Playing debt ceiling roulette
 ## #Web3Weekly: May 14-20, 2023
 
 *This newsletter is elated to be a media partner of the [Epic Web3 Conference](https://www.epicweb3.com/), coming up June 9 in Lisbon. This can't-miss event will feature an [amazing lineup](https://www.epicweb3.com/#speaker) of speakers from every facet of the web3 space, as you can see from the graphic below.*
@@ -10,64 +10,38 @@
 [![EWC banner ad](https://w3w.news/img/sponsored/Speakers1.png)](http://bit.ly/3kDskvF)
 <hr>
 
+**The increasingly worrisome possibility** of a sovereign debt default [by the United States](https://www.nytimes.com/2023/05/21/us/politics/biden-debt-limit.html) should be instructive for crypto folks in two ways.
 
-<!--
+First, there is the obvious face value: If this highly avoidable disaster comes to pass in the next few weeks, it will cause great harm to the conventional finance system -- and  the public's trust in it going forward. That may in turn drive more users to blockchain networks as alternative (and [unexpectedly saner](https://www.coindesk.com/consensus-magazine/2023/05/17/what-does-the-debt-limit-showdown-mean-for-bitcoin/)) venues for financial transactions.
 
-Riff on debt ceiling.
+Second, a default would be instructive as a window onto the state of U.S. governance in general. We should all ask, if Congress and the White House can't collaborate on something so [basic](https://www.snopes.com/fact-check/gop-debt-ceiling-trump-presidency/) as passing what could be a one-paragraph bill to avoid a [multi-trillion dollar](https://www.nytimes.com/2023/05/20/business/economy/debt-limit-default-economy.html) economic disaster, what *else* can't they do?
 
-https://www.coindesk.com/consensus-magazine/2023/05/17/what-does-the-debt-limit-showdown-mean-for-bitcoin/
+To mention a couple of pertinent examples: How could we expect this very same group of policymakers to pass a comprehensive framework for crypto regulation anytime soon? Or regulations for artificial intelligence, as [recommended](https://www.nytimes.com/2023/05/16/technology/openai-altman-artificial-intelligence-regulation.html) by OpenAI CEO Sam Altman in Senate testimony Tuesday?
 
-https://www.theblock.co/post/231639/biden-opposes-debt-deal-friendly-to-crypto-traders-amid-threat-of-u-s-default
+These are things that are big and complex and *not* imminently likely to cause a meltdown in the broader economy. They would thus seem even harder politically to pull off than resolving the current debt impasse.
 
--->
+Yes, legislation to address pressing technological issues might make for a better future, provide welcome clarity to the marketplace, and encourage innovation. But until evidence surfaces proving otherwise, foresight is not exactly official Washington's strong suit right now.
 
-The week's headlines:
+The week's other notable headlines:
 
-- We need better btc custodial solutions: https://www.coindesk.com/consensus-magazine/2023/05/12/as-bitcoin-scales-we-need-better-custodial-solutions/
+- **Strike founder Jack Mallers** announced plans to expand availability of his company's bitcoin payments app from three countries [to 65](https://www.coindesk.com/tech/2023/05/19/bitcoin-payments-app-strike-expands-to-65-countries-from-three/). Yowza.
 
-- CoinDesk's Casey: AI and web3 "belong together." https://www.coindesk.com/consensus-magazine/2023/05/19/why-web3-and-the-ai-internet-belong-together/
+- **Coinbase said it** will [begin offering](https://www.theblock.co/post/231384/coinbase-one-subscription-uk-germany-ireland) its Coinbase One subscription service to the United Kingdom, Ireland, and Germany.
 
-- Coinbase expanded its subscription service to the UK, Ireland, and Germany. https://www.theblock.co/post/231384/coinbase-one-subscription-uk-germany-ireland
+- **Attendance was down** at Miami's Bitcoin 2023 conference, a gathering that had become a major industry event in recent years. Attendees attributed the smaller crowd to the lingering effects of the bear market in crypto, Decrypt [reports](https://decrypt.co/140595/bitcoin-2023-in-miami-bear-market-lower-attendance).
 
-- Scammers are already targeting Worldcoin. https://www.theblock.co/post/231433/worldcoin-iris-black-market
+- **Custodia Bank,** a Wyoming-based institution that has [tussled with regulators](https://www.forbes.com/sites/digital-assets/2023/04/25/custodia-bank-case-highlights-federal-reserve-hypocrisy-toward-crypto/) over offering fully backed deposits, plants to launch a new [bitcoin custody service](https://decrypt.co/140603/bitcoin-custody-services-are-coming-to-custodia-bank-says-ceo-caitlin-long) for clients.
 
-- Custodia Bank is launching BTC custody services. https://decrypt.co/140603/bitcoin-custody-services-are-coming-to-custodia-bank-says-ceo-caitlin-long
-
-- The U.S. government is one of the market's largest bitcoin whales. What could possibly go wrong? https://www.theblock.co/post/231563/the-us-government-is-one-of-the-largest-bitcoin-whales-what-does-that-mean-for-the-crypto-market
-
-- Bitcoin companies must provide "proof of reserves" in Texas under a new law. https://decrypt.co/140647/texas-proof-of-reserves-for-crypto-exchanges
-
-- Saylor says MicroStrategy is looking at Ordinals as a development platform. https://decrypt.co/140670/microstrategy-looking-at-bitcoin-ordinals-for-app-development-says-michael-saylor
-
-- VeeCon is shifting beyond web3. https://decrypt.co/videos/interviews/FqIm7PfV/gary-vee-discusses-veecon-2023s-broader-shift-beyond-web3
-
-- Attendance was down at BTC Miami. https://decrypt.co/140595/bitcoin-2023-in-miami-bear-market-lower-attendance | Dorsey's TBD unveiled new "web5" toolkit. https://www.coindesk.com/tech/2023/05/19/jack-dorsey-backed-tbd-launches-new-web5-toolkit-to-decentralize-the-internet/
-
-- An attacker took over the Tornado Cash DAO. https://www.coindesk.com/tech/2023/05/21/attacker-takes-over-tornado-cash-dao-with-vote-fraud-token-slumps-40/
-
-- Strike has expanded to 65 countries. https://www.coindesk.com/tech/2023/05/19/bitcoin-payments-app-strike-expands-to-65-countries-from-three/
-
-- JPMorgan analysts say a lack of regulatory clarity in the U.S. concerning stablecoins may hamper a broader crypto recovery. https://www.coindesk.com/markets/2023/05/19/crypto-market-recovery-unlikely-until-stablecoin-universe-stops-shrinking-jpmorgan/           
-
-- The Australian Stock Exchange scrapped its blockchain project. https://bitcoinist.com/blockchain-plans-scrapped-by-asx/
-
-- NYT: E-sports franchises are struggling, putting themselves up for sale. https://www.nytimes.com/2023/05/20/technology/e-sports-revenue-video-gaming.html
-
-- Chicago Fed says crash of FTX, etc creates a "classic financial crisis." <!-- Need link -->
+- **Digital asset companies** must provide "proof of reserves" in under a new state law [passed by the Texas legislature](https://decrypt.co/140647/texas-proof-of-reserves-for-crypto-exchanges).
 
 [![EWC banner ad](https://w3w.news/img/sponsored/ewc-banner.png)](http://bit.ly/3kDskvF)
+- **Some interesting number crunching from Bloomberg News:** The top five performing non-leveraged U.S. exchange-traded funds so far in 2023 all track [some form of crypto investment](https://www.wealthmanagement.com/etfs/crypto-etfs-are-year-s-best-performers-only-lure-12-million). But those ETFs have seen surprising little investor interest, with only $12 million of inflows so far this year. Separately, Bloomberg [conducted a survey](https://www.msn.com/en-us/money/other/crypto-s-most-influential-companies-often-follow-their-own-rules-even-after-ftx-s-collapse/ar-AA1bcwyv) of 60 large crypto companies about governance. Many still don't have basic transparency measures in place like independent auditors and outside board members, Bloomberg said.
 
-- Sam Altman told a Senate committee AI should be regulated. https://www.nytimes.com/2023/05/16/technology/openai-altman-artificial-intelligence-regulation.html
+- **The Block reports that** the U.S. government [holds more than 50,000 bitcoin](https://www.theblock.co/post/231563/the-us-government-is-one-of-the-largest-bitcoin-whales-what-does-that-mean-for-the-crypto-market) seized in various enforcement cases. That technically makes it one of the biggest ["whales"](https://www.investopedia.com/terms/b/bitcoin-whale.asp) in the global crypto market. Hmmmm...
 
-- Great AI danger is in the military: https://www.nytimes.com/2023/05/19/opinion/artificial-intelligence-military-nuclear.html
+- **The Australian Securities Exchange** scrapped plans to [integrate blockchain technology](https://bitcoinist.com/blockchain-plans-scrapped-by-asx/) into its core trading software.
 
-- AI in real estate: https://builtin.com/artificial-intelligence/ai-real-estate |
-
-- SEC says it doesn't need new rules specific to crypto, contrary to Coinbase's claims. <!-- Need link -->
-
-- Microsoft says its AI is showing signs of sentience. https://www.nytimes.com/2023/05/16/technology/microsoft-ai-human-reasoning.html
-
-- Bloomberg: Novogratz's Galaxy Digital moving some operations offshore. Hmmmm... <!-- Need link -->
+- **CoinDesk's Michael Casey** says AI and web3 "belong together" as [complementary technologies](https://www.coindesk.com/consensus-magazine/2023/05/19/why-web3-and-the-ai-internet-belong-together/).
 
 <hr>
  <em>
@@ -76,21 +50,11 @@ The week's headlines:
  </em>
 <hr>
 
-- Bloomberg intvu with Raj Gokal, Solana co-founder. <!-- Need link -->
+- **The New York Times reports** that e-sports franchises [are struggling](https://www.nytimes.com/2023/05/20/technology/e-sports-revenue-video-gaming.html), with many laying off employees or even putting themselves up for sale.
 
-- Bloomberg: Top 5 performing stock-market ETFs YTD are all related to crypto. <!-- Need link -->
+- **ICYMI:** Cointelegraph recently posted an [explainer video](https://www.youtube.com/watch?v=qDCJJHODjeA) about how venture capitalist Tim Draper became a bitcoin billionaire. For reasons I can't quite discern, the video is narrated by an animated rabbit who appears to live inside an old 8-bit Nintendo video game. But if you can put those things aside a moment, the information is indeed accurate.
 
-- New iOS app for ChatGPT. <!-- Need link -->
-
-- Bloomberg survey of top 60 crypto companies shows that most don't adhere to best practices on corporate governance. <!-- need link -->
-
-- MIT Tech Review: Your digital life isn't as permanent as you think it is. https://www.technologyreview.com/2023/05/19/1073367/digital-life-isnt-permanent-google-twitter-inactive-accounts/
-
-- ICYMI: Cointelegraph did a video explainer of how venture capitalist Tim Draper became a bitcoin billionaire. https://www.youtube.com/watch?v=qDCJJHODjeA
-
-- There's a new on-chain governance survey out as well, covering top 50 chains. Hmmm... <!-- Need link -->
-
-- A startup is turning Old Game Boys into crypto wallets. https://decrypt.co/140730/old-game-boy-could-next-bitcoin-ethereum-wallet
+- **The startup Keyp** is converting Old Game Boys [into crypto wallets](https://decrypt.co/140730/old-game-boy-could-next-bitcoin-ethereum-wallet).
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
