Draft for 28 May 2023

--- a/newsletter/2023-05-28.md
+++ b/newsletter/2023-05-28.md
@@ -1,7 +1,7 @@
 # Bitcoin is getting weird(er)
 ## #Web3Weekly: May 21-27, 2023
 
-*This newsletter is elated to be a media partner of the [Epic Web3 Conference](https://www.epicweb3.com/), coming up June 9 in Lisbon. This can't-miss event will feature an [amazing lineup](https://www.epicweb3.com/#speaker) of speakers from every facet of the web3 space, as you can see from the graphic below.*
+*This newsletter is glad to be a media partner of the [Epic Web3 Conference](https://www.epicweb3.com/), coming up June 9 in Lisbon. This can't-miss event will feature an [amazing lineup](https://www.epicweb3.com/#speaker) of speakers from every facet of the web3 space, as you can see from the graphic below.*
 
 *As a special offer to our readers, Epic Web3 is offering a 15% discount when you purchase a Full or VC pass to their conference. To redeem the #Web3Weekly discount, be sure to apply the code WEB3WEEKLY at checkout when you purchase your ticket [here](http://bit.ly/3kDskvF).*
 
@@ -11,35 +11,47 @@
 
 <hr>
 
-<!--
+**There is no question** that Bicoin's pseudonymous creator Satoshi Nakamoto intended it as an "electronic cash system." The term is right there in the title of [his whitepaper](https://bitcoin.org/bitcoin.pdf) from 2008.
 
-Bitcoin is now the number-two blockchain network for non-fungible tokens, (Solana) according to the site NFT Culture. https://www.nftculture.com/nft-news/bitcoin-emerges-as-second-largest-nft-blockchain-challenging-ethereums-dominance/ | NFT generation has tripled on the Bitcoin blockchain since May. https://decrypt.co/142415/passing-fad-bitcoin-ordinals-inscriptions-hit-new-milestone | A new dollar-pegged stablecoin is coming to the Bitcoin network. https://www.coindesk.com/business/2023/05/25/bitcoins-hot-ordinals-economy-is-getting-a-dollar-backed-stablecoin/
+So how did the Bitcoin network end up storing artwork like [this image](https://www.ordinalhub.com/inscription/6499bb011513828628510ba9e1f4c80a169ece748f72b79cabc32d96b6b4e17fi0) of what appears to be a zombie samurai?
 
+Enter [Ordinals](https://academy.binance.com/en/articles/what-are-ordinals-an-overview-of-bitcoin-nfts), a protocol launched in January 2023 that allows someone to turn the smallest tradeable unit of a bitcoin, called a satoshi, into a non-fungible token. This is done by inscribing additional information onto that satoshi using Bitcoin's shared ledger, stuff beyond the purely transaction-related data that capital-s Satoshi originally envisioned.
 
+What's ensued since the launch of Ordinals is either pure awesomeness or utter sacrilege, depending on your view of Bitcoin. Its chain is now the [number-two venue](https://www.nftculture.com/nft-news/bitcoin-emerges-as-second-largest-nft-blockchain-challenging-ethereums-dominance/) for NFT activity overall, behind only Ethereum and ahead of earlier contenders like Solana. But that's meant slower traffic and [higher fees](https://coinmarketcap.com/community/articles/64182b5f2d80720f9caa20ad/) on the Bitcoin network, infuriating "traditional" users who just want to [use BTC as money](https://bitcoinmagazine.com/culture/bitcoin-ordinal-problems-solved-by-layer-2).
 
-**When I covered the stock market for the Wall Street Journal,** we would often talk about [home bias](https://www.investopedia.com/terms/h/homebias.asp). That is, the well-documented tendency of investors in a country to buy shares of companies based in the same country. <!-- Quote from Investopedia about lack of logic 
+Even Peter Schiff, a gold-focused money manager and vocal bitcoin critic, unveiled a new [Ordinals artwork collection](https://twitter.com/PeterSchiff/status/1662210584178475008) on Friday, created in partnership with an artist who goes my Market Price. (Subtle!)
 
-I've since come to believe there may be a form of home bias among tech users as well, and that it carries big implications for web3 in particular.
+Meanwhile, the startup Stably on Monday begain [issuing a dollar-backed stablecoin](https://www.coindesk.com/business/2023/05/25/bitcoins-hot-ordinals-economy-is-getting-a-dollar-backed-stablecoin/) using Ordinals. So now we effectively have U.S. dollars trading on the Bitcoin network.
 
-<!-- Riff on blockchain.com CEO remarks + Cathie Woods --
+That *definitely* isn't something Satoshi ever intended. But I suspect many more  such surprises are yet to come.
 
-https://www.barrons.com/news/thousands-quit-us-over-crypto-negativity-blockchain-chief-2d8a10d8
+The week's other notable headlines:
 
-- Meta fined by EU. https://www.nytimes.com/2023/05/22/business/meta-facebook-eu-privacy-fine.html
+- Celsius assets sold to Fahrenheit. https://www.coindesk.com/policy/2023/05/25/fahrenheit-wins-bid-to-acquire-assets-of-insolvent-crypto-lender-celsius/
 
--->
+- DCG sunset Tradeblock, its prime broerage unit. https://www.coindesk.com/business/2023/05/25/dcg-sunsets-trade-execution-prime-brokerage-unit-tradeblock/ | https://www.theblock.co/post/232289/dcg-shutters-crypto-institutional-services-subsidiary-tradeblock
 
-On to the week's notable headlines:
-
-- tk
-- tk
-- tk
+- **WTF is going on with Tether?** The data firm Kaiko notes that the popular stablecoin's market valuation is [nearing a record](https://research.kaiko.com/insights/why-is-tethers-market-cap-approaching-all-time-highs) over $80 billion even though trading volume has been relatively weak in 2023. Decrypt [reports](https://decrypt.co/142036/tether-market-cap-edges-toward-all-time-high-minting-tron-surges) that rising usage of Tether on the Tron network for decentralized finance apps may be driving the valuation increase. Separately, Tether's parent company recently [announced](https://www.theblock.co/post/231156/tether-bitcoin-investments-profits) it is shifting its reserve strategy away from purchases of U.S. government debt and toward crypto, including bitcoin.
 
 [![EWC banner ad](https://w3w.news/img/sponsored/ewc-banner.png)](http://bit.ly/3kDskvF)
 
-- tk
-- tk
-- tk
+- **Bitcoinist reports** that Ethereum "whales" have [accumulated $9 billion in ETH](https://bitcoinist.com/ethereum-whales-on-the-rise-acquires-billion-eth/) so far this year, spurred in part by the network's transition to a new Proof of Stake consensus mechanism. The report is based on data from the analytics firm IntoTheBlock, which [defines an ETH "whale"](https://twitter.com/intotheblock/status/1661995894667984896) as any single wallet that controls more than 0.1% of token supply.
+
+- Ledger situation. https://www.coindesk.com/business/2023/05/23/crypto-wallet-provider-ledger-postpones-release-of-key-recovery-service-after-public-criticism/
+
+- Sam Altman's Worldcoin raised $115M. https://www.coindesk.com/business/2023/05/25/sam-altmans-crypto-project-worldcoin-raises-115m-led-by-blockchain-capital/ | https://www.theblock.co/post/232172/worldcoin-developer-announces-115-million-fundraise
+
+- Ava Labs launched a "no-code" web3 platform for businesses to build decentralized apps without having to code them from scratch. https://www.coindesk.com/web3/2023/05/24/ava-labs-launches-no-code-web3-launchpad-avacloud/
+
+- Hong Kong unveiled a new regulatiory code for crypto.  https://bitcoinist.com/crypto-hk-proclaimed-leader-in-global-market/
+
+- Worries about US competitiveness. https://www.barrons.com/news/thousands-quit-us-over-crypto-negativity-blockchain-chief-2d8a10d8 | Cathie Wood says the U.S. is "losing" the race to be a bitcoin hub. https://www.coindesk.com/policy/2023/05/23/us-is-losing-the-bitcoin-movement-cathie-wood/
+
+- Brazil is launching a CBDC. https://www.coindesk.com/policy/2023/05/25/brazils-central-bank-selects-14-participants-for-cbdc-pilot/ | https://www.coindesk.com/policy/2023/05/25/brazils-central-bank-selects-14-participants-for-cbdc-pilot/
+
+- MasterCard makes bullish statements on blockchain to TechCrunch. https://techcrunch.com/2023/05/24/mastercard-blockchain-crypto/
+
+- Ripples CEO explained why it bought a stake in the exchange Bitstamp. https://www.theblock.co/post/232223/ripple-bitstamp-pantera-galaxy-digital
 
 <hr>
 <em>  
@@ -48,57 +60,15 @@ On to the week's notable headlines:
 </em>
 <hr>
 
-- tk
-- tk
-
-<!--
-
-- The U.S. surgeon general issued a warning about social media for teens. https://www.nytimes.com/2023/05/23/health/surgeon-general-social-media-mental-health.html
-
-
-- Blockchain.com's CEO says a U.S. sovereign default would at first hurt crypto token prices. https://www.reuters.com/technology/blockchaincom-ceo-says-us-default-would-hit-crypto-initially-2023-05-25/ | https://www.barrons.com/news/thousands-quit-us-over-crypto-negativity-blockchain-chief-2d8a10d8
-
-- Hong Kong unveiled a new regulatiory code for crypto. <!-- https://bitcoinist.com/crypto-hk-proclaimed-leader-in-global-market/
-
-- MasterCard makes bullish statements on blockchain to TechCrunch. https://techcrunch.com/2023/05/24/mastercard-blockchain-crypto/
-
-- Brazil is launching a CBDC. https://www.coindesk.com/policy/2023/05/25/brazils-central-bank-selects-14-participants-for-cbdc-pilot/ | https://www.coindesk.com/policy/2023/05/25/brazils-central-bank-selects-14-participants-for-cbdc-pilot/
-
-- Cathie Wood says the U.S. is "losing" the race to be a bitcoin hub. https://www.coindesk.com/policy/2023/05/23/us-is-losing-the-bitcoin-movement-cathie-wood/
-
-
-- Ava Labs launched a "no-code" web3 platform for businesses to build decentralized apps without having to code them from scratch. https://www.coindesk.com/web3/2023/05/24/ava-labs-launches-no-code-web3-launchpad-avacloud/
+- **JPMorgan Chase has applied for a trademark** on a finance-focused AI chatbot [called IndexGPT](https://decrypt.co/142577/jp-morgan-files-patent-for-chatgpt-finance-clone-indexgpt).
 
 - Brave unveiled NFT-enabled video calls. https://www.coindesk.com/web3/2023/05/24/web3-friendly-browser-brave-introduces-nft-gated-video-calls/
 
-- Blockworks on web3 social media. https://blockworks.co/news/web3-conquer-social-media
+- A paralyzed Dutch man walked thanks to a new cybernetic interace. <!-- https://www.science.org/content/article/paralyzed-man-walks-naturally-thanks-wireless-bridge-brain-spine?et_rid=34848442&et_cid=4744397 | https://www.technologyreview.com/2023/05/26/1073655/how-it-feels-to-have-a-life-changing-brain-implant-removed/ -->
 
-- USDT's market cap and trading volume are out of whack according to a new analysis. <!-- Need link
+- Brooklyn Public Library... https://twitter.com/evacide/status/1662535041615028225
 
-- Ledger situation. <!-- Need link
-
-- Celsius assets sold to Fahrenheit. https://www.coindesk.com/policy/2023/05/25/fahrenheit-wins-bid-to-acquire-assets-of-insolvent-crypto-lender-celsius/
-
-- Apple is making big money from AI via its 30% App Store "tax." https://decrypt.co/142309/apple-takes-its-30-bite-from-ai-innovation-costing-openai-millions
-
-- DCG sunset Tradeblock, its prime broerage unit. https://www.coindesk.com/business/2023/05/25/dcg-sunsets-trade-execution-prime-brokerage-unit-tradeblock/ | https://www.theblock.co/post/232289/dcg-shutters-crypto-institutional-services-subsidiary-tradeblock
-
-- A Nike NFT sale suffered delays but still netted $1M. https://www.coindesk.com/web3/2023/05/25/nike-of1-nft-sale-surpasses-1m-despite-delays-tech-issues/
-
-- Ripples CEO explained why it bought a stake in the exchange Bitstamp. https://www.theblock.co/post/232223/ripple-bitstamp-pantera-galaxy-digital
-
-- Tether's CTO says it's planning to buy bitcoin. https://www.theblock.co/post/232194/paolo-tether-diversification
-
-- Sam Altman's Worldcoin raised $115M. https://www.coindesk.com/business/2023/05/25/sam-altmans-crypto-project-worldcoin-raises-115m-led-by-blockchain-capital/ | https://www.theblock.co/post/232172/worldcoin-developer-announces-115-million-fundraise
-
-- Claim: Crypto can help secure AI. https://www.coindesk.com/consensus-magazine/2023/05/25/how-crypto-can-help-secure-ai/
-
-
-- Promethum won a key SEC approval. <!-- Need link
-
-- **A new Washington Post analysis** of book challenges across the United States shows that a majority were filed by [just 11 people](https://www.washingtonpost.com/education/2023/05/23/lgbtq-book-ban-challengers/).
-
-- A paralyzed Dutch man walked thanks to a new cybernetic interace. <!-- https://www.science.org/content/article/paralyzed-man-walks-naturally-thanks-wireless-bridge-brain-spine?et_rid=34848442&et_cid=4744397 | https://www.technologyreview.com/2023/05/26/1073655/how-it-feels-to-have-a-life-changing-brain-implant-removed/-->
+- **Princess Leia's dress from A New Hope is up for auction.** The item, which was (ahem) "removed" from the movie's set in 1977 by a crew member, is expected to [fetch $2 million](https://www.msn.com/en-us/movies/news/lost-and-bloodied-princess-leia-dress-from-star-wars-up-for-2m-auction/ar-AA1bDRnB). The auction will also feature props from The Dark Knight, Blade Runner, Guardians of the Galaxy. and Poltergeist, according to [The Hollywood Reporter](https://www.hollywoodreporter.com/movies/movie-news/historic-prop-auction-princess-leia-dress-star-lord-helmet-1235499199/).
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
